# dapter

./: .gitignore  README.md  mkdocs.yaml  pyproject.toml  requirements-dev.txt  requirements-docs.txt
.github/workflows/: pytest.yml
dapter/: __init__.py  column_names.py  core.py  utils.py
docs/: index.md  installation.md
examples/: basic_example.ipynb  complex_example.ipynb
examples/data/: bank_a.csv  bank_b.csv  bank_c.csv
test/: test_dapter.py
